# layout

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: benchmark.rs
inputs/: 1.dot  3.dot  6.dot  7.dot  9.dot  bk.dot  dag_diamond.dot  diamond.dot  ella.dot  expr.dot  f64_precision.dot  heb.dot  html.dot  html2.dot  html3.dot  html_arrow.dot  html_complex.dot  html_densenet.dot  html_font.dot  html_font_table.dot  html_img.dot  html_lr.dot  hyperlink.dot  noa.dot  prof.dot  run.sh  sched0.dot  sched1.dot  self.dot  small.dot  test.nu  test.sh  tree.dot
inputs/bugs/: cross_prio.dot
layout/: Cargo.toml
layout/src/: lib.rs
layout/src/adt/: dag.rs  map.rs  mod.rs
layout/src/backends/: mod.rs  svg.rs
layout/src/core/: color.rs  format.rs  geometry.rs  mod.rs  style.rs  utils.rs
layout/src/gv/: builder.rs  html.rs  mod.rs  record.rs
layout/src/gv/parser/: ast.rs  lexer.rs  parser.rs  printer.rs
layout/src/std_shapes/: mod.rs  render.rs  shapes.rs
layout/src/topo/: layout.rs  mod.rs  optimizer.rs
layout/src/topo/placer/: bk.rs  edge_fixer.rs  mod.rs  move_between_rows.rs  place.rs  simple.rs  verifier.rs
src/: lib.rs
src/adt/: map.rs
src/backends/: svg.rs
src/core/: base.rs  color.rs  format.rs  style.rs  utils.rs
src/gv/: builder.rs  record.rs
src/gv/parser/: mod.rs  parser.rs
src/std_shapes/: shapes.rs
src/topo/: optimizer.rs
src/topo/placer/: move_between_rows.rs  simple.rs  verifier.rs
tests/: test.rs
