[package]
name = "layout"
version = "0.1.0"
authors = ["Nadav Rotem <nadav256@gmail.com>"]
edition = "2018"
description = "A graph visualization program"
keywords = ["visualization", "svg", "render", "dot", "graphviz"]

[[bin]]
name = "layout"
test = false
bench = false

[[bin]]
name = "run"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.27.1"
log = "0.4.14"
env_logger = "0.9"
