[package]
name = "layout-cli"
version = "0.1.0"
authors = ["Nadav Rotem <nadav256@gmail.com>"]
edition = "2018"
description = "A graph visualization program"
keywords = ["visualization", "svg", "render", "dot", "graphviz"]
license = "MIT"
repository = "https://github.com/nadavrot/layout"

# If you are looking for the library, see the `layout` directory in this repository.

[[bin]]
name = "layout"
test = false
bench = false

[[bin]]
name = "run"
test = false
bench = false

[workspace]
members = ["layout"]

[dependencies]
layout-rs = { path = "layout", features = ["log"] }
clap = "4.0.18"
log = "0.4.17"
env_logger = "0.9"
