[package]
name = "layout-rs"
version = "0.1.1"
authors = ["Nadav Rotem <nadav256@gmail.com>"]
edition = "2018"
description = "A graph visualization program"
keywords = ["visualization", "svg", "render", "dot", "graphviz"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/nadavrot/layout"

# Renaming the library allows us to publish the crate as `layout-rs`,
# but imports will begin with:
#
# ```rust
# use layout;
# ```
[lib]
name = "layout"

[dependencies]
log = { version = "0.4.17", optional = true }
